tests/errors/syntax.NewlineInQuotedString.res
>> Syntax | File: syntax.NewlineInQuotedString.art
    error | Line: 4
          | 
          | newline in quoted string
          | for multiline strings, you could use either:
          | curly blocks {..} or triple "-" templates
          | 
          | near: this "something else
          |                           ^